tests/NormalTests/paczka1/fuzzy1/77430968.err
Error in line 1: FSFUHU S107 76,4
Error in line 4: ggP A404 96,6
Error in line 3: FSFUHU A404 20,8
Error in line 15: pnH3C A326 38,0
Error in line 20: FSFUHU A404 10,8
Error in line 23: ynNclXWpgc S107 31,8
Error in line 27: ggP A279 36,2
Error in line 18: pnH3C A279 63,2
